k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: betmasterx
  labels:
    name: betmasterx
    environment: production
